exploration retrieve samples and signatures
