# server/services/analysis/exploration/exploration.js
@@ -3,6 +3,14 @@ const { v4: uuidv4 } = require('uuid');
 const { getExposureData } = require('../../query');
 const { calculateTmb, calculateTmbSignature } = require('./tmb');
 
+function alphaNumericSort(array) {
+  return array.sort((a, b) => {
+    return a.localeCompare(b, undefined, {
+      numeric: true,
+      sensitivity: 'base',
+    });
+  });
+}
 async function queryExposure(req, res, next) {
   try {
     const { limit, ...query } = req.query;
@@ -26,6 +34,24 @@ async function explorationOptions(req, res, next) {
     const columns = ['study', 'strategy', 'cancer', 'signatureSetName'];
     const data = await getExposureData(connection, query, columns);
     res.json(data);
+  } catch (error) {
+    next(error);
+  }
+}
+
+async function explorationSamples(req, res, next) {
+  try {
+    const { study, strategy, signatureSetName } = req.query;
+    const connection = req.app.locals.connection;
+
+    const query = { study, strategy, signatureSetName };
+    const columns = ['sample', 'signatureName'];
+    const data = await getExposureData(connection, query, columns);
+    const samples = alphaNumericSort([...new Set(data.map((e) => e.sample))]);
+    const signatures = alphaNumericSort([
+      ...new Set(data.map((e) => e.signatureName)),
+    ]);
+    res.json({ samples, signatures });
   } catch (error) {
     next(error);
   }
@@ -66,6 +92,7 @@ const router = Router();
 
 router.get('/exposure', queryExposure);
 router.get('/explorationOptions', explorationOptions);
+router.get('/explorationSamples', explorationSamples);
 router.get('/tmb', tmb);
 router.get('/tmbSignature', tmbSignature);
 
